# perceptree

./: Cargo.toml  README.md  SPEC.md
examples/: end_to_end.rs
src/: data.rs  encoding.rs  eval.rs  infer.rs  leaf_model.rs  lib.rs  linalg.rs  train.rs  tree.rs
tests/: integration.rs
