[package]
name = "perceptree"
version = "0.1.0"
edition = "2021"
description = "Coarse-partition / linear-leaf tabular binary classifier"
license = "MIT"

[lib]
name = "perceptree"
path = "src/lib.rs"

# Zero external dependencies: hand-rolled linear algebra, CSV, and a
# deterministic synthetic data generator keep the core self-contained.
[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[example]]
name = "end_to_end"
path = "examples/end_to_end.rs"
